--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </figure>
     </section>
 
-    <section id="bibtex">
+<!--     <section id="bibtex">
         <h2>Citation</h2>
         <hr/>
         <pre><code>
@@ -182,9 +182,9 @@
             year = {2021}
         }
 </code></pre>
-    </section>
+    </section> -->
 
-    <section id="paper">
+<!--     <section id="paper">
         <h2>Paper</h2>
         <hr/>
         <figure style="width: 100%;">
@@ -193,7 +193,7 @@
             </a>
         </figure>
         <hr/>
-    </section>
+    </section> -->
 
 </div>
 </body>
