--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=default'></script>
 
 <link rel="stylesheet" type="text/css" href="style.css" />
-
-<div class="topnav" id="myTopnav">
-  <a href="https://www.nvidia.com/"><img width="100%" src="assets/nvidia.svg"></a>
-  <a href="https://nv-tlabs.github.io/" ><strong>Toronto AI Lab</strong></a>
-</div>
+  
 
 <!-- End : Google Analytics Code -->
 <script type="text/javascript" src="../js/hidebib.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,400italic,600italic,300,300italic' rel='stylesheet' type='text/css'>
 <head>
-    <title>Hierarchical Neural Implicit Pose Network for Animation and Motion Retargeting</title>
-    <meta property="og:description" content="Hierarchical Neural Implicit Pose Network for Animation and Motion Retargeting"/>
+    <title>GANHead: Towards Generative Animatable Neural Head Avatars</title>
+    <meta property="og:description" content="GANHead: Towards Generative Animatable Neural Head Avatars"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -35,16 +31,16 @@
  <body>
 <div class="container">
     <div class="paper-title">
-      <h1>Hierarchical Neural Implicit Pose Network for Animation and Motion Retargeting</h1>
+      <h1>GANHead: Towards Generative Animatable Neural Head Avatars</h1>
     </div>
 
     
     <div id="authors">
         <div class="author-row">
-            <div class="col-5 text-center"><a href="https://sravb.github.io/">Sourav Biswas</a><sup>1,2</sup></div>
-            <div class="col-5 text-center"><a href="https://kangxue.org/">Kangxue Yin</a><sup>1</sup></div>
-            <div class="col-5 text-center"><a href="https://shumash.com/">Maria Shugrina</a><sup>1</sup></div>
-            <div class="col-5 text-center"><a href="https://www.cs.toronto.edu/~fidler/">Sanja Fidler</a><sup>1,3,4</sup></div>
+            <div class="col-5 text-center">Sijing Wu<sup>1</sup></div>
+            <div class="col-5 text-center"><a href="https://kangxue.org/">Yichao Yan</a><sup>1</sup></div>
+            <div class="col-5 text-center"><a href="https://shumash.com/">Yunhao Li</a><sup>1</sup></div>
+            <div class="col-5 text-center"><a href="https://www.cs.toronto.edu/~fidler/">Yuhao Cheng</a><sup>1</sup></div>
             <div class="col-5 text-center"><a href="https://www.samehkhamis.com/">Sameh Khamis</a><sup>1</sup></div>
         </div>
 
