--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
     <div id="authors">
         <div class="author-row">
             <div class="col-5 text-center">Sijing Wu<sup>1</sup></div>
-            <div class="col-5 text-center"><a href="https://kangxue.org/">Yichao Yan</a><sup>1</sup></div>
-            <div class="col-5 text-center"><a href="https://shumash.com/">Yunhao Li</a><sup>1</sup></div>
-            <div class="col-5 text-center"><a href="https://www.cs.toronto.edu/~fidler/">Yuhao Cheng</a><sup>1</sup></div>
-            <div class="col-5 text-center"><a href="https://www.samehkhamis.com/">Sameh Khamis</a><sup>1</sup></div>
+            <div class="col-5 text-center"><a href="https://daodaofr.github.io/">Yichao Yan</a><sup>1</sup></div>
+            <div class="col-5 text-center">Yunhao Li<sup>1</sup></div>
+            <div class="col-5 text-center">Yuhao Cheng<sup>1</sup></div>
+            <div class="col-5 text-center">Wenhan Zhu<sup>1</sup></div>
+            <div class="col-5 text-center">Ke Gao<sup>2</sup></div>
+            <div class="col-5 text-center">XiaoBo Li<sup>2</sup></div>
+            <div class="col-5 text-center"><a href="https://scholar.google.com/citations?user=E6zbSYgAAAAJ&hl=en&oi=ao">Guangtao Zhai</a><sup>1</sup></div>
         </div>
 
         <div class="affil-row">
-            <div class="col-4 text-center"><sup>1</sup>NVIDIA</a></div>
-            <div class="col-4 text-center"><sup>2</sup>University of Waterloo</a></div>
-            <div class="col-4 text-center"><sup>3</sup>University of Toronto</div>
-            <div class="col-4 text-center"><sup>4</sup>Vector Institute</div>
+            <div class="col-4 text-center"><sup>1</sup>Shanghai Jiao Tong University</a></div>
+            <div class="col-4 text-center"><sup>2</sup>Alibaba</a></div>
         </div>
 
         <div style="clear: both">
