--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col-2 text-center"><sup>2</sup>Alibaba</a></div>
         </div>
 
-        <div style="clear: both">
+<!--         <div style="clear: both">
             <div class="paper-btn-parent">
             <a class="supp-btn" href="https://arxiv.org/abs/2112.00958">
                 <span class="material-icons"> description </span>
@@ -62,10 +62,10 @@
                 <span class="material-icons"> description </span>
                   BibTeX
             </a>
-        </div></div>
+        </div></div> -->
     </div>
 
-    <section id="teaser">
+<!--     <section id="teaser">
         <a href="assets/teaser.png">
             <img width="100%" src="assets/teaser.png">
         </a>
@@ -73,7 +73,7 @@
             subjects in a single trained neural implicit representation, while showing
             excellent reconstruction, generalization to novel poses, and only requiring weak supervision.
         </p>
-    </section>
+    </section> -->
 
     <section id="abstract"/>
         <h2>Abstract</h2>
@@ -92,7 +92,7 @@
             </p>
     </section>
 
-    <section id="method">
+<!--     <section id="method">
         <h2>Method</h2>
         <hr/>
         <figure style="width: 100%;">
@@ -136,11 +136,11 @@
         </figure>
 
 
-    </section>
+    </section> -->
     
     
-    <section id="applications">
-        <h2>Applications</h2>
+    <section id="Demo Video">
+        <h2>Demo Video</h2>
         <hr/>
         <figure style="width: 100%;">
             <a href="assets/rand.jpg">
