--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <!-- End : Google Analytics Code -->
 <script type="text/javascript" src="../js/hidebib.js"></script>
 <!-- <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,400italic,600italic,300,300italic' rel='stylesheet' type='text/css'> -->
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
-
+<!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'> -->
+<link href='https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro' rel='stylesheet' type='text/css'>
+  
 <head>
     <title>GANHead: Towards Generative Animatable Neural Head Avatars</title>
     <meta property="og:description" content="GANHead: Towards Generative Animatable Neural Head Avatars"/>
