--- a/index.html
+++ b/index.html
@@ -146,9 +146,24 @@
         <h2>Demo Video</h2>
         <hr/>
         <figure style="width: 100%;">
-            <a href="assets/rand.jpg">
-                <img width="100%" src="assets/rand.jpg">
-            </a>
+            <video class="centered" width="100%" controls muted loop autoplay>
+                <source src="assets/demo.mp4" type="video/mp4">
+            </video>
+            <p class="caption">The shape space of <strong>HIPNet</strong> is entirely data-driven. We can sample new random subjects from our shape space by fitting a multivariate Gaussian
+                to our subject embeddings.
+            </p>
+        </figure>
+        <br/>
+        <hr/>
+    </section>
+
+    <section id="Application">
+        <h2>Application</h2>
+        <hr/>
+        <figure style="width: 100%;">
+            <video class="centered" width="100%" controls muted loop autoplay>
+                <source src="assets/reenactment.mp4" type="video/mp4">
+            </video>
             <p class="caption">The shape space of <strong>HIPNet</strong> is entirely data-driven. We can sample new random subjects from our shape space by fitting a multivariate Gaussian
                 to our subject embeddings.
             </p>
