--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <hr/>
         <figure style="width: 100%;">
             <video class="centered" width="100%" controls muted loop autoplay>
-                <source src="assets/demo.mp4" type="video/mp4">
+                <source src="assets/demo_new.mp4" type="video/mp4">
             </video>
             <p class="caption">The shape space of <strong>HIPNet</strong> is entirely data-driven. We can sample new random subjects from our shape space by fitting a multivariate Gaussian
                 to our subject embeddings.
