--- a/index.html
+++ b/index.html
@@ -171,14 +171,11 @@
         <hr/>
         
         <figure style="width: 100%;">
-            <a href="assets/opt.png">
-                <img width="100%" src="assets/opt.png">
+            <a href="assets/fitting.png">
+                <img width="100%" src="assets/fitting.png">
             </a>
             <p class="caption">
-                We can fit to input point cloud data through test-time optimization. The mIoU of the reconstructed
-                mesh is higher with a denser point cloud.  More importantly, with only 1k points on the front of the
-                mesh we are competitive with 10k points uniformly sampled everywhere. This specific setting simulates points coming from a front-facing
-                depth sensor and is of practical importance.
+                We can fit to raw scans.
             </p>
         </figure>
     </section>
