--- a/index.html
+++ b/index.html
@@ -180,6 +180,30 @@
         </figure>
     </section>
 
+    <section id="Other Results">
+        <h2>Other Results</h2>
+        <hr/>
+        <figure style="width: 100%;">
+            <video class="centered" width="100%" controls muted loop autoplay>
+                <source src="assets/reenactment.mp4" type="video/mp4">
+            </video>
+            <p class="caption">The shape space of <strong>HIPNet</strong> is entirely data-driven. We can sample new random subjects from our shape space by fitting a multivariate Gaussian
+                to our subject embeddings.
+            </p>
+        </figure>
+        <br/>
+        <hr/>
+        
+        <figure style="width: 80%;">
+            <a href="assets/fitting.png">
+                <img width="100%" src="assets/fitting.png">
+            </a>
+            <p class="caption">
+                We also train our model on a subset of Multiface dataset in which scans are much smoother. 
+            </p>
+        </figure>
+    </section>
+
 <!--     <section id="bibtex">
         <h2>Citation</h2>
         <hr/>
