--- a/index.html
+++ b/index.html
@@ -184,8 +184,11 @@
         <h2>Other Results</h2>
         <hr/>
         <figure style="width: 100%;">
-            <video class="centered" width="100%" controls muted loop autoplay>
-                <source src="assets/reenactment.mp4" type="video/mp4">
+            <video width="49%" controls muted loop autoplay>
+                <source src="assets/shape.mp4" type="video/mp4">
+            </video>
+            <video width="49%" controls muted loop autoplay>
+                <source src="assets/detail.mp4" type="video/mp4">
             </video>
             <p class="caption">The shape space of <strong>HIPNet</strong> is entirely data-driven. We can sample new random subjects from our shape space by fitting a multivariate Gaussian
                 to our subject embeddings.
