--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     <section id="Application">
         <h2>Application</h2>
         <hr/>
+        <h3>Face Reenactment</h3>
         <figure style="width: 100%;">
             <video class="centered" width="100%" controls muted loop autoplay>
                 <source src="assets/reenactment.mp4" type="video/mp4">
@@ -169,7 +170,8 @@
         </figure>
         <br/>
         <hr/>
-        
+      
+        <h3>Raw Scan Fitting</h3>
         <figure style="width: 80%;">
             <a href="assets/fitting.png">
                 <img width="100%" src="assets/fitting.png">
