--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <hr/>
     </section>
 
-    <section id="Application">
+    <section id="Applications">
         <h2>Application</h2>
         <hr/>
         <h3>Face Reenactment</h3>
