--- a/index.html
+++ b/index.html
@@ -185,12 +185,20 @@
     <section id="Other Results">
         <h2>Other Results</h2>
         <hr/>
+        <td colspan="2">
+        <center>
         <video width="20%" controls muted loop autoplay>
             <source src="assets/shape.mp4" type="video/mp4">
         </video>
+        </center>
+        </td>
+        <td colspan="2">
+        <center>
         <video width="20%" controls muted loop autoplay>
             <source src="assets/detail.mp4" type="video/mp4">
         </video>
+        </center>
+        </td>
         <a href="assets/multiface_fitting.png">
             <img width="100%" src="assets/multiface_fitting.png">
         </a>
