--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <section id="Other Results">
         <h2>Other Results</h2>
         <hr/>
+        <table align=center width="100%">
         <td colspan="2">
         <center>
         <video width="20%" controls muted loop autoplay>
@@ -199,6 +200,7 @@
         </video>
         </center>
         </td>
+        </table>
         <a href="assets/multiface_fitting.png">
             <img width="100%" src="assets/multiface_fitting.png">
         </a>
