--- a/index.html
+++ b/index.html
@@ -186,27 +186,40 @@
         <h2>Other Results</h2>
         <hr/>
         <table align=center width="100%">
+            <tr>
+            <td colspan="2">
+                <h3>Sample Latent Codes</h3>
+            </td>
+            <td colspan="2">
+            </td>
+            <td colspan="7">
+                <h3>Raw Scan Fitting</h3>
+            </td>
+            </tr>
+          
+            <tr>
             <td colspan="2">
                 <center>
-                <video width="50%" controls muted loop autoplay>
+                <video width="100%" controls muted loop autoplay>
                     <source src="assets/shape_code.mp4" type="video/mp4">
                 </video>
             </center>
             </td>
             <td colspan="2">
                 <center>
-                <video width="50%" controls muted loop autoplay>
+                <video width="100%" controls muted loop autoplay>
                     <source src="assets/detail_code.mp4" type="video/mp4">
                 </video>
                 </center>
             </td>
-            <td colspan="4">
+            <td colspan="7">
                 <center>
                 <a href="assets/multiface_fitting.png">
-                    <img width="80%" src="assets/multiface_fitting.png">
+                    <img width="100%" src="assets/multiface_fitting.png">
                 </a>
                 </center>
             </td>
+            </tr>
         </table>
         <p class="caption">The shape space of <strong>HIPNet</strong> is entirely data-driven. We can sample new random subjects from our shape space by fitting a multivariate Gaussian
             to our subject embeddings.
