--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
             <tr>
             <td colspan="2">
                 <center>
-                <video width="100%" controls muted loop autoplay>
+                <video width=105px controls muted loop autoplay>
                     <source src="assets/shape_code.mp4" type="video/mp4">
                 </video>
             </center>
             </td>
             <td colspan="2">
                 <center>
-                <video width="100%" controls muted loop autoplay>
+                <video width=105px controls muted loop autoplay>
                     <source src="assets/detail_code.mp4" type="video/mp4">
                 </video>
                 </center>
@@ -215,7 +215,7 @@
             <td colspan="7">
                 <center>
                 <a href="assets/multiface_fitting.png">
-                    <img width="100%" src="assets/multiface_fitting.png">
+                    <img width=735px src="assets/multiface_fitting.png">
                 </a>
                 </center>
             </td>
