--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
             <div class="col-8 text-center"><a href="https://scholar.google.com/citations?user=E6zbSYgAAAAJ&hl=en&oi=ao">Guangtao Zhai</a><sup>1</sup></div>
         </div>
 
-        <div class="affil-row">
+<!--         <div class="affil-row">
             <div class="col-2 text-center"><sup>1</sup>Shanghai Jiao Tong University</a></div>
             <div class="col-2 text-center"><sup>2</sup>Alibaba</a></div>
-        </div>
+        </div> -->
+        <ul class="affil" , style="text-align: center;">
+          <li><sup>1</sup>Shanghai Jiao Tong University</li>
+          <li><sup>2</sup>Alibaba</li>
+        </ul>
 
 <!--         <div style="clear: both">
             <div class="paper-btn-parent">
