--- a/index.html
+++ b/index.html
@@ -54,10 +54,16 @@
             <div class="col-2 text-center"><sup>1</sup>Shanghai Jiao Tong University</a></div>
             <div class="col-2 text-center"><sup>2</sup>Alibaba</a></div>
         </div> -->
-        <ul class="affil" , style="text-align: center;">
-          <li><sup>1</sup>Shanghai Jiao Tong University</li>
-          <li><sup>2</sup>Alibaba</li>
-        </ul>
+        <table align=center width="50%">
+            <tr>
+            <td colspan="1">
+                <sup>1</sup>Shanghai Jiao Tong University
+            </td>
+            <td colspan="1">
+                <sup>2</sup>Alibaba
+            </td>
+            </tr>
+        </table>
 
 <!--         <div style="clear: both">
             <div class="paper-btn-parent">
