--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
             <video class="centered" width="100%" controls muted loop autoplay>
                 <source src="assets/demo_new.mp4" type="video/mp4">
             </video>
-            <p class="caption">The shape space of <strong>HIPNet</strong> is entirely data-driven. We can sample new random subjects from our shape space by fitting a multivariate Gaussian
-                to our subject embeddings.
+            <p class="caption">The demo video shows the latent code sampling and head avatar generation results, followed by the animation results controlled by FLAME parameters.
             </p>
         </figure>
         <hr/>
