--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
             <video class="centered" width="100%" controls muted loop autoplay>
                 <source src="assets/reenactment.mp4" type="video/mp4">
             </video>
-            <p class="caption">The shape space of <strong>HIPNet</strong> is entirely data-driven. We can sample new random subjects from our shape space by fitting a multivariate Gaussian
-                to our subject embeddings.
+            <p class="caption"> We estimate the FLAME parameters of the sourse video, and use the estimated pose and expression parameters to animate the generated head avatars. 
+                                The generated avatars can fully reproduce FLAME's poses and expressions.
             </p>
         </figure>
         <br/>
