--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
             <a href="assets/fitting.png">
                 <img width="100%" src="assets/fitting.png">
             </a>
+        </figure>
+        <figure style="width: 100%;">
             <p class="caption">
-                We can fit to raw scans.
+                Our model can also be fitted to raw scans to produce personal animatable head avatars.
             </p>
         </figure>
     </section>
