--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
             </td>
             </tr>
         </table>
-        <p class="caption">The shape space of <strong>HIPNet</strong> is entirely data-driven. We can sample new random subjects from our shape space by fitting a multivariate Gaussian
-            to our subject embeddings.
+        <p class="caption"> We also train our model on a subset of Multiface datase. Since Multiface datase has less detail and noise in the hair region, 
+                            our model can learn more details of th facial region and achieve better fitting results.
         </p>
         <hr/>
     </section>
