--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
 <!--         <div class="affil-row">
-            <div class="col-2 text-center"><sup>1</sup>Shanghai Jiao Tong University</a></div>
+            <div class="col-2 text-center"><sup>1</sup><a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a></div>
             <div class="col-2 text-center"><sup>2</sup>Alibaba</a></div>
         </div> -->
         <table align=center width="50%">
