--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <div class="paper-title">
       <h1>GANHead: Towards Generative Animatable Neural Head Avatars</h1>
     </div>
+  
+    <h3>(Accepted by CVPR 2023)</h3>
 
     
     <div id="authors">
