--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <a href="assets/method.png">
                 <img width="100%" src="assets/method1.png">
             </a>
-            <p class="caption" style="margin-bottom: 1px;">
+            <p class="caption">
                 Given shape, detail and color latent codes, the generation model outputs coarse shape geometry and detailed normal and texture in the canonical space. 
                 The generated canonical head avatars can then be deformed to target poses and expressions via the deformation module. 
                 In the first training stage, occupancy values of the deformed shapes are used to calculate the occupancy loss, along with the LBS loss, to supervise the geometry network and the deformation module. 
