--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </tr>
         </table>
       
-      <h4>(Accepted by CVPR 2023)</h4>
+      <h4>(CVPR 2023)</h4>
 
 <!--         <div style="clear: both">
             <div class="paper-btn-parent">
