--- a/index.html
+++ b/index.html
@@ -209,31 +209,29 @@
         <hr/>
     </section>
 
-<!--     <section id="bibtex">
+    <section id="bibtex">
         <h2>Citation</h2>
         <hr/>
         <pre><code>
-        @misc{biswas2021hipnet,
-            title = {Hierarchical Neural Implicit Pose Network for Animation and Motion Retargeting}, 
-            author = {Sourav Biswas and Kangxue Yin and Maria Shugrina and Sanja Fidler and Sameh Khamis},
-            eprint = {2112.00958},
-            archivePrefix={arXiv},
-            primaryClass={cs.CV},
-            year = {2021}
+        @article{wu2023ganhead,
+          title={GANHead: Towards Generative Animatable Neural Head Avatars},
+          author={Wu, Sijing and Yan, Yichao and Li, Yunhao and Cheng, Yuhao and Zhu, Wenhan and Gao, Ke and Li, Xiaobo and Zhai, Guangtao},
+          journal={arXiv preprint arXiv:2304.03950},
+          year={2023}
         }
 </code></pre>
-    </section> -->
+    </section>
 
-<!--     <section id="paper">
+    <section id="paper">
         <h2>Paper</h2>
         <hr/>
         <figure style="width: 100%;">
-            <a href="https://arxiv.org/abs/2112.00958">
-                <img width="100%" src="assets/preview.png">
+            <a href="https://arxiv.org/pdf/2304.03950.pdf">
+                <img width="100%" src="assets/paper.png">
             </a>
         </figure>
         <hr/>
-    </section> -->
+    </section>
 
 </div>
 </body>
