--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
     <section id="bibtex">
         <h2>Citation</h2>
         <hr/>
-        <code>
-        @article{wu2023ganhead,
-          title={GANHead: Towards Generative Animatable Neural Head Avatars},
-          author={Wu, Sijing and Yan, Yichao and Li, Yunhao and Cheng, Yuhao and Zhu, Wenhan and Gao, Ke and Li, Xiaobo and Zhai, Guangtao},
-          journal={arXiv preprint arXiv:2304.03950},
-          year={2023}
-        }
-</code>
+        <pre><code>
+@article{wu2023ganhead,
+  title={GANHead: Towards Generative Animatable Neural Head Avatars},
+  author={Wu, Sijing and Yan, Yichao and Li, Yunhao and Cheng, Yuhao and Zhu, Wenhan and Gao, Ke and Li, Xiaobo and Zhai, Guangtao},
+  journal={arXiv preprint arXiv:2304.03950},
+  year={2023}
+}
+</code></pre>
     </section>
 
     <section id="paper">
