--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       
       <h4>(CVPR 2023)</h4>
 
-<!--         <div style="clear: both">
+        <div style="clear: both">
             <div class="paper-btn-parent">
             <a class="supp-btn" href="https://arxiv.org/abs/2112.00958">
                 <span class="material-icons"> description </span>
@@ -78,7 +78,7 @@
                 <span class="material-icons"> description </span>
                   BibTeX
             </a>
-        </div></div> -->
+        </div></div>
     </div>
 
 <!--     <section id="teaser">
