--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div style="clear: both">
             <div class="paper-btn-parent">
-            <a class="supp-btn" href="https://arxiv.org/abs/2112.00958">
+            <a class="supp-btn" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf">
                 <span class="material-icons"> description </span>
                  Paper
             </a>
