--- a/index.html
+++ b/index.html
@@ -213,10 +213,11 @@
         <h2>Citation</h2>
         <hr/>
         <pre><code>
-@article{wu2023ganhead,
+@inproceedings{wu2023ganhead,
   title={GANHead: Towards Generative Animatable Neural Head Avatars},
   author={Wu, Sijing and Yan, Yichao and Li, Yunhao and Cheng, Yuhao and Zhu, Wenhan and Gao, Ke and Li, Xiaobo and Zhai, Guangtao},
-  journal={arXiv preprint arXiv:2304.03950},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={437--447},
   year={2023}
 }
 </code></pre>
