--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     <section id="bibtex">
         <h2>Citation</h2>
-        <hr/>
+<!--         <hr/>
         <pre><code>
 @inproceedings{wu2023ganhead,
   title={GANHead: Towards Generative Animatable Neural Head Avatars},
@@ -220,7 +220,14 @@
   pages={437--447},
   year={2023}
 }
-</code></pre>
+</code></pre> -->
+    <pre><code>@inproceedings{wu2023ganhead,
+  title={GANHead: Towards Generative Animatable Neural Head Avatars},
+  author={Wu, Sijing and Yan, Yichao and Li, Yunhao and Cheng, Yuhao and Zhu, Wenhan and Gao, Ke and Li, Xiaobo and Zhai, Guangtao},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={437--447},
+  year={2023}
+    }</code></pre>
     </section>
 
     <section id="paper">
