--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     </section>
 
     <section id="bibtex">
+      <div class="container is-max-desktop content">
         <h2>Citation</h2>
 <!--         <hr/>
         <pre><code>
@@ -228,6 +229,7 @@
   pages={437--447},
   year={2023}
     }</code></pre>
+        </div>
     </section>
 
     <section id="paper">
