--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     
     <div id="authors">
-        <div class="author-row">
+<!--         <div class="author-row">
             <div class="col-8 text-center">Sijing Wu<sup>1</sup></div>
             <div class="col-8 text-center"><a href="https://daodaofr.github.io/">Yichao Yan</a><sup>1</sup></div>
             <div class="col-8 text-center">Yunhao Li<sup>1</sup></div>
@@ -49,6 +49,16 @@
             <div class="col-8 text-center">Ke Gao<sup>2</sup></div>
             <div class="col-8 text-center">XiaoBo Li<sup>2</sup></div>
             <div class="col-8 text-center"><a href="https://scholar.google.com/citations?user=E6zbSYgAAAAJ&hl=en&oi=ao">Guangtao Zhai</a><sup>1</sup></div>
+        </div> -->
+            <div class="author-row">
+            <h4>Sijing Wu<sup>1</h4>
+            <h4><a href="https://daodaofr.github.io/">Yichao Yan</a><sup>1</sup></h4>
+            <h4>Yunhao Li<sup>1</sup></h4>
+            <h4>Yuhao Cheng<sup>1</sup></h4>
+            <h4>Wenhan Zhu<sup>1</sup></h4>
+            <h4>Ke Gao<sup>2</sup></h4>
+            <h4>XiaoBo Li<sup>2</sup></h4>
+            <h4><a href="https://scholar.google.com/citations?user=E6zbSYgAAAAJ&hl=en&oi=ao">Guangtao Zhai</a><sup>1</sup></h4>
         </div>
 
 <!--         <div class="affil-row">
