--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     
     <div id="authors">
-<!--         <div class="author-row">
+        <div class="author-row">
             <div class="col-8 text-center">Sijing Wu<sup>1</sup></div>
             <div class="col-8 text-center"><a href="https://daodaofr.github.io/">Yichao Yan</a><sup>1</sup></div>
             <div class="col-8 text-center">Yunhao Li<sup>1</sup></div>
@@ -49,16 +49,6 @@
             <div class="col-8 text-center">Ke Gao<sup>2</sup></div>
             <div class="col-8 text-center">XiaoBo Li<sup>2</sup></div>
             <div class="col-8 text-center"><a href="https://scholar.google.com/citations?user=E6zbSYgAAAAJ&hl=en&oi=ao">Guangtao Zhai</a><sup>1</sup></div>
-        </div> -->
-            <div class="author-row">
-            <h5>Sijing Wu<sup>1</h5>
-            <h5><a href="https://daodaofr.github.io/">Yichao Yan</a><sup>1</sup></h5>
-            <h5>Yunhao Li<sup>1</sup></h5>
-            <h5>Yuhao Cheng<sup>1</sup></h5>
-            <h5>Wenhan Zhu<sup>1</sup></h5>
-            <h5>Ke Gao<sup>2</sup></h5>
-            <h5>XiaoBo Li<sup>2</sup></h5>
-            <h5><a href="https://scholar.google.com/citations?user=E6zbSYgAAAAJ&hl=en&oi=ao">Guangtao Zhai</a><sup>1</sup></h5>
         </div>
 
 <!--         <div class="affil-row">
@@ -91,15 +81,14 @@
         </div></div>
     </div>
 
-<!--     <section id="teaser">
+    <section id="teaser">
         <a href="assets/teaser.png">
             <img width="100%" src="assets/teaser.png">
         </a>
-        <p class="caption">Our approach, <strong>HIPNet</strong>, models 3D shape of multiple articulated
-            subjects in a single trained neural implicit representation, while showing
-            excellent reconstruction, generalization to novel poses, and only requiring weak supervision.
+        <p class="caption">We propose <strong>GANHead</strong> to generate diverse head avatars with complete geometry and realistic texture. The generated avatars can
+be deformed to target poses and expressions through FLAME parameters, which generalize well to unseen poses and expressions.
         </p>
-    </section> -->
+    </section>
 
     <section id="abstract"/>
         <h2>Abstract</h2>
