--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
         <a href="assets/teaser.png">
             <img width="100%" src="assets/teaser.png">
         </a>
-        <p class="caption">We propose <strong>GANHead</strong> to generate diverse head avatars with complete geometry and realistic texture. The generated avatars can
-be deformed to target poses and expressions through FLAME parameters, which generalize well to unseen poses and expressions.
+        <p class="caption"><strong>GANHead</strong> generates animatable head avatars with complete geometry and realistic texture.
         </p>
     </section>
 
@@ -208,10 +207,10 @@ be deformed to target poses and expressions through FLAME parameters, which gene
         <hr/>
     </section>
 
-    <section id="bibtex">
+    <section class="section" id="bibtex">
       <div class="container is-max-desktop content">
         <h2>Citation</h2>
-<!--         <hr/>
+<!--         <hr/> -->
         <pre><code>
 @inproceedings{wu2023ganhead,
   title={GANHead: Towards Generative Animatable Neural Head Avatars},
@@ -220,15 +219,8 @@ be deformed to target poses and expressions through FLAME parameters, which gene
   pages={437--447},
   year={2023}
 }
-</code></pre> -->
-    <pre><code>@inproceedings{wu2023ganhead,
-  title={GANHead: Towards Generative Animatable Neural Head Avatars},
-  author={Wu, Sijing and Yan, Yichao and Li, Yunhao and Cheng, Yuhao and Zhu, Wenhan and Gao, Ke and Li, Xiaobo and Zhai, Guangtao},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
-  pages={437--447},
-  year={2023}
-    }</code></pre>
-        </div>
+        </code></pre>
+      </div>
     </section>
 
     <section id="paper">
