--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
                 <span class="material-icons"> description </span>
                   BibTeX
             </a>
+            <span class="link-block">
+                <a href="https://daodaofr.github.io/"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-youtube"></i>
+                  </span>
+                  <span>Video</span>
+                </a>
+            </span>
         </div></div>
     </div>
 
