--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a href="assets/teaser.png">
             <img width="100%" src="assets/teaser.png">
         </a>
-        <p class="caption"><strong>GANHead</strong> generates animatable head avatars with complete geometry and realistic texture.
+        <p align=center class="caption"><strong>GANHead</strong> generates animatable head avatars with complete geometry and realistic texture.
         </p>
     </section>
 
