--- a/index.html
+++ b/index.html
@@ -71,22 +71,19 @@
         <div style="clear: both">
             <div class="paper-btn-parent">
             <a class="supp-btn" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf">
-                <span class="material-icons"> description </span>
-                 Paper
+<!--                 <span class="material-icons"> description </span>
+                 Paper -->
+              <image src="assets/paper_icon.png" height="60px">
+              <h4><strong>Paper</strong></h4>
+            </a>
+            <a class="supp-btn" href="https://github.com/wsj-sjtu/GANHead">
+              <image src="assets/github_icon.png" height="60px">
+              <h4><strong>Code</strong></h4>
             </a>
             <a class="supp-btn" href="assets/bib.txt">
                 <span class="material-icons"> description </span>
                   BibTeX
             </a>
-            <span class="link-block">
-                <a href="https://daodaofr.github.io/"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-youtube"></i>
-                  </span>
-                  <span>Video</span>
-                </a>
-            </span>
         </div></div>
     </div>
 
