--- a/index.html
+++ b/index.html
@@ -78,26 +78,26 @@
               <image src="assets/github_icon.png" height="60px">
               <h4><strong>Code</strong></h4>
             </a>
-<!--             <a class="supp-btn" href="assets/bib.txt">
+            <a class="supp-btn" href="assets/bib.txt">
                 <span class="material-icons"> description </span>
                   BibTeX
-            </a> -->
+            </a>
         </div></div> -->
-                               <ul class="nav nav-pills nav-justified">
-                                <li>
-                                    <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf" target="_blank">
-                                        <image src="assets/paper_icon.png" height="60px">
-                                            <h4><strong>Paper</strong></h4>
-                                    </a>
-                                </li>
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                <li>
-                                    <a href="https://github.com/wsj-sjtu/GANHead" target="_blank">
-                                        <image src="assets/github_icon.png" height="60px">
-                                            <h4><strong>Code</strong></h4>
-                                    </a>
-                                </li>
-                            </ul>
+           <ul class="nav nav-pills nav-justified">
+            <li>
+                <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf" target="_blank">
+                    <image src="assets/paper_icon.png" height="60px">
+                        <h4><strong>Paper</strong></h4>
+                </a>
+            </li>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <li>
+                <a href="https://github.com/wsj-sjtu/GANHead" target="_blank">
+                    <image src="assets/github_icon.png" height="60px">
+                        <h4><strong>Code</strong></h4>
+                </a>
+            </li>
+        </ul>
     </div>
 
     <section id="teaser">
