--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                   BibTeX
             </a>
         </div></div> -->
+        <div style="clear: both">
            <ul class="nav nav-pills nav-justified">
             <li>
                 <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf" target="_blank">
@@ -98,6 +99,7 @@
                 </a>
             </li>
         </ul>
+      </div>
     </div>
 
     <section id="teaser">
