--- a/index.html
+++ b/index.html
@@ -165,10 +165,13 @@
             <video class="centered" width="100%" controls muted loop autoplay>
                 <source src="assets/reenactment.mp4" type="video/mp4">
             </video>
-            <p class="caption"> We estimate the FLAME parameters of the sourse video, and use the estimated pose and expression parameters to animate the generated head avatars. 
+<!--             <p class="caption"> We estimate the FLAME parameters of the sourse video, and use the estimated pose and expression parameters to animate the generated head avatars. 
                                 The generated avatars can fully reproduce FLAME's poses and expressions.
-            </p>
+            </p> -->
         </figure>
+        <p class="caption"> We estimate the FLAME parameters of the sourse video, and use the estimated pose and expression parameters to animate the generated head avatars. 
+                                The generated avatars can fully reproduce FLAME's poses and expressions.
+        </p>
         <br/>
         <hr/>
       
