--- a/index.html
+++ b/index.html
@@ -83,8 +83,25 @@
                   BibTeX
             </a>
         </div></div> -->
-        <div style="clear: both">
-           <ul class="nav nav-pills nav-justified">
+
+        <table align=center width="30%">
+            <tr>
+            <td colspan="1">
+                <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf" target="_blank">
+                    <image src="assets/paper_icon.png" height="60px">
+                        <h4><strong>Paper</strong></h4>
+                </a>
+            </td>
+            <td colspan="1">
+                <a href="https://github.com/wsj-sjtu/GANHead" target="_blank">
+                    <image src="assets/github_icon.png" height="60px">
+                        <h4><strong>Code</strong></h4>
+                </a>
+            </td>
+            </tr>
+         </table>
+      
+<!--            <ul class="nav nav-pills nav-justified">
             <li>
                 <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf" target="_blank">
                     <image src="assets/paper_icon.png" height="60px">
@@ -98,7 +115,7 @@
                         <h4><strong>Code</strong></h4>
                 </a>
             </li>
-        </ul>
+        </ul> -->
       </div>
     </div>
 
