--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <table align=center width="50%">
             <tr>
             <td colspan="1">
-                <sup>1</sup>Shanghai Jiao Tong University
+                <h6><sup>1</sup>Shanghai Jiao Tong University<h6>
             </td>
             <td colspan="1">
-                <sup>2</sup>Alibaba
+                <h6><sup>2</sup>Alibaba</h6>
             </td>
             </tr>
         </table>
@@ -88,14 +88,14 @@
             <tr>
             <td colspan="1">
                 <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf" target="_blank">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/paper_icon.png" height="60px">
-                    <h4><strong>Paper</strong></h4>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/paper_icon.png" height="55px">
+                    <h5><strong>Paper</strong></h5>
                 </a>
             </td>
             <td colspan="1">
                 <a href="https://github.com/wsj-sjtu/GANHead" target="_blank">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/github_icon.png" height="60px">
-                    <h4><strong>Code</strong></h4>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/github_icon.png" height="55px">
+                    <h5><strong>Code</strong></h5>
                 </a>
             </td>
             </tr>
