--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
             <tr>
             <td colspan="1">
                 <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf" target="_blank">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/paper_icon.png" height="55px">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/paper_icon.png" height="55px">
                     <h5><strong>Paper</strong></h5>
                 </a>
             </td>
             <td colspan="1">
                 <a href="https://github.com/wsj-sjtu/GANHead" target="_blank">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/github_icon.png" height="55px">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/github_icon.png" height="55px">
                     <h5><strong>Code</strong></h5>
                 </a>
             </td>
@@ -233,7 +233,8 @@
     </section>
 
     <section class="section" id="bibtex">
-      <div class="container is-max-desktop content">
+<!--       <div class="container is-max-desktop content"> -->
+      <div style="overflow-x:auto;">
         <h2>Citation</h2>
 <!--         <hr/> -->
         <pre><code>
