--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </td>
             <td colspan="1">
                 <a href="https://github.com/wsj-sjtu/GANHead" target="_blank">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/github_icon.png" height="55px">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/github_icon.png" height="55px">
                     <h5><strong>Code</strong></h5>
                 </a>
             </td>
@@ -233,9 +233,8 @@
     </section>
 
     <section class="section" id="bibtex">
-<!--       <div class="container is-max-desktop content"> -->
+      <h2>Citation</h2>
       <div style="overflow-x:auto;">
-        <h2>Citation</h2>
 <!--         <hr/> -->
         <pre><code>
 @inproceedings{wu2023ganhead,
