--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <h2>Citation</h2>
       <div style="overflow-x:auto;">
 <!--         <hr/> -->
-        <pre><code>
+        <pre style="background-color: #e9eeef;padding: 1.25em 1.5em"><code>
 @inproceedings{wu2023ganhead,
   title={GANHead: Towards Generative Animatable Neural Head Avatars},
   author={Wu, Sijing and Yan, Yichao and Li, Yunhao and Cheng, Yuhao and Zhu, Wenhan and Gao, Ke and Li, Xiaobo and Zhai, Guangtao},
