--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </a>
         </div></div> -->
 
-        <table align=center width="25%">
+        <table align=center width="36%">
             <tr>
             <td colspan="1">
                 <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf" target="_blank">
@@ -96,6 +96,12 @@
                 <a href="https://github.com/wsj-sjtu/GANHead" target="_blank">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/github_icon.png" height="55px">
                     <h5><strong>Code</strong></h5>
+                </a>
+            </td>
+            <td colspan="1">
+                <a href="https://youtu.be/t0i10dFu7z0" target="_blank">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/youtube_icon.png" height="55px">
+                    <h5><strong>Video</strong></h5>
                 </a>
             </td>
             </tr>
