--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </a>
         </div></div> -->
 
-        <table align=center width="32%">
+        <table align=center width="33%">
             <tr>
             <td colspan="1">
                 <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wu_GANHead_Towards_Generative_Animatable_Neural_Head_Avatars_CVPR_2023_paper.pdf" target="_blank">
@@ -99,7 +99,7 @@
                 </a>
             </td>
             <td colspan="1">
-                <a href="https://youtu.be/t0i10dFu7z0" target="_blank">
+                <a href="https://www.youtube.com/watch?v=Cg0ubzo7DXk" target="_blank">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<image src="assets/youtube_icon.png" height="55px">
                     <h5><strong>Video</strong></h5>
                 </a>
